[gd_scene load_steps=7 format=3 uid="uid://cw5w31lacihsp"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_4y8dx"]
[ext_resource type="Texture2D" uid="uid://d2yyukf046nlj" path="res://Assets/Textures/mage_naked.png" id="1_74l4r"]
[ext_resource type="Texture2D" uid="uid://df4ckb4uyu5n" path="res://Assets/Textures/hat_green.png" id="3_of6h3"]
[ext_resource type="Texture2D" uid="uid://cc8jtdjnvncbi" path="res://Assets/Textures/cloak_green.png" id="4_vok34"]
[ext_resource type="PackedScene" uid="uid://cmnqjotnxdhgw" path="res://Scenes/camera_2d.tscn" id="5_a27k2"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_8heqr"]
radius = 4.0
height = 10.0

[node name="CharacterBody2D" type="CharacterBody2D"]
top_level = true
texture_filter = 1
script = ExtResource("1_4y8dx")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_74l4r")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 2
position = Vector2(7.10543e-15, 12)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_8heqr")

[node name="HatGreen" type="Sprite2D" parent="."]
position = Vector2(0, -1)
texture = ExtResource("3_of6h3")

[node name="CloakGreen" type="Sprite2D" parent="."]
texture = ExtResource("4_vok34")

[node name="Camera2D" parent="." instance=ExtResource("5_a27k2")]

[connection signal="change_cloak" from="." to="." method="_on_change_cloak"]
[connection signal="change_hat" from="." to="." method="_on_change_hat"]
